--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "crypto": "^1.0.1",
     "next": "13.4.4",
+    "oauth-1.0a": "^2.2.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "viem": "^1.0.2"
   }
 }
