--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "crypto": "^1.0.1",
     "next": "13.4.4",
     "oauth-1.0a": "^2.2.6",
